# Rebirth

./: .gitignore  .gitmodules  CMakeLists.txt
Engine/Source/Editor/Lua/: LuaConfig.cpp  LuaConfig.h  LuaCore.cpp  LuaCore.h  LuaImage.cpp  LuaImage.h  LuaScene.cpp  LuaScene.h  LuaSprite.cpp  LuaSprite.h  LuaTextBox.cpp  LuaTextBox.h
Engine/Source/Runtime/: main.cpp
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Core.cpp  Core.h  ErrorHandler.cpp  ErrorHandler.h
Engine/Source/Runtime/OpenGL/: IndexBuffer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Transition.cpp  Transition.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Engine/Source/Runtime/Platform/: Platform.h
Engine/Source/Runtime/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Engine/Source/Runtime/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Source/: main.cpp
Source/Engine/Application/: Application.cpp  Application.h  Config.cpp  Config.h
Source/Engine/Core/: Application.cpp  Application.h  Core.cpp  Core.h
Source/Engine/Core/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Source/Engine/Core/Platform/: Platform.h
Source/Engine/Core/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Source/Engine/Core/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Source/Engine/Lua/: LuaConfig.cpp  LuaConfig.h  LuaCore.cpp  LuaCore.h  LuaImage.cpp  LuaImage.h  LuaTextBox.cpp  LuaTextBox.h
Source/Engine/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  Texture.cpp  Texture.h  Transition.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Source/Engine/Platform/: Platform.h
Source/Engine/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Source/Engine/Platform/Windows/: WindowsWindow.h
Source/Engine/VNTools/: VNScript.cpp  VNScript.h
examples/simplenovel/: resources.lua  script.lua
examples/simplenovel/game/data/scripts/: config.lua  resources.lua  script.lua
garbage_collector/glad/: rmdirs.txt  rmfiles.txt
garbage_collector/glfw/: rmdirs.txt
garbage_collector/glm/: rmfiles.txt
garbage_collector/imgui/: rmdirs.txt
garbage_collector/sol2/: rmfiles.txt
garbage_collector/stb/: rmdirs.txt  rmfiles.txt
scripts/: init.sh
